--- a/src/BlinForms.Framework/BlinForms.Framework.csproj
+++ b/src/BlinForms.Framework/BlinForms.Framework.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-      <FilesToSign Include="$(OutDir)\**\*.dll">
+      <FilesToSign Include="$(OutputAssembly)">
           <Authenticode>Microsoft400</Authenticode>
       </FilesToSign>
   </ItemGroup>
