--- a/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
+++ b/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-      <FilesToSign Include="$(OutDir)\**\*.dll">
+      <FilesToSign Include="$(OutputAssembly)">
           <Authenticode>Microsoft400</Authenticode>
       </FilesToSign>
   </ItemGroup>
