Change files to sign

--- a/src/BlinForms.Framework/BlinForms.Framework.csproj
+++ b/src/BlinForms.Framework/BlinForms.Framework.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-      <FilesToSign Include="$(OutputAssembly)">
+      <FilesToSign Include="$(OutDir)\BlinForms.Framework.dll">
           <Authenticode>Microsoft400</Authenticode>
       </FilesToSign>
   </ItemGroup>
