--- a/src/Microsoft.MobileBlazorBindings/Microsoft.MobileBlazorBindings.csproj
+++ b/src/Microsoft.MobileBlazorBindings/Microsoft.MobileBlazorBindings.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-      <FilesToSign Include="$(OutputAssembly)">
+      <FilesToSign Include="$(OutDir)\Microsoft.MobileBlazorBindings.dll">
           <Authenticode>Microsoft400</Authenticode>
       </FilesToSign>
   </ItemGroup>
