--- a/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
+++ b/src/Microsoft.MobileBlazorBindings.Core/Microsoft.MobileBlazorBindings.Core.csproj
@@ -23,6 +23,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0" />
+    <PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" Version="0.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
