--- a/templates/MobileBlazorBindings-template-pack.csproj
+++ b/templates/MobileBlazorBindings-template-pack.csproj
@@ -36,6 +36,7 @@
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <ContentTargetFolders>content</ContentTargetFolders>
+    <PackageOutputPath>$(PackageOutputPath)\netstandard2.0</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
