--- a/templates/MobileBlazorBindings-template-pack.csproj
+++ b/templates/MobileBlazorBindings-template-pack.csproj
@@ -78,9 +78,10 @@
   </ItemGroup>
 
   <Target Name="MovePackagesToFinalBin" DependsOnTargets="SignNuGetPackage" AfterTargets="SignNuGetPackage">
-    <Message Text="MovePackagesToFinalBin, sources = '@(PackageBinFiles)'" Importance="High" />
+    <Message Text="MovePackagesToFinalBin, sources = '$(OutDir)\**\*.nupkg'" Importance="High" />
     <Message Text="MovePackagesToFinalBin, destination = '$(RepoRootPath)/bin/Packages/$(Configuration)'" Importance="High" />
 
-    <Copy SourceFiles="@(PackageBinFiles)" DestinationFolder="$(RepoRootPath)/bin/Packages/$(Configuration)" />
+    <Copy SourceFiles="$(OutDir)\**\*.nupkg" DestinationFolder="$(RepoRootPath)/bin/Packages/$(Configuration)" />
+    <Copy SourceFiles="$(OutDir)\**\*.snupkg" DestinationFolder="$(RepoRootPath)/bin/Packages/$(Configuration)" />
   </Target>
 </Project>
