--- a/templates/MobileBlazorBindings-template-pack.csproj
+++ b/templates/MobileBlazorBindings-template-pack.csproj
@@ -72,16 +72,16 @@
     </PackageReference>
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageBinFiles Include="$(OutDir)\**\*.nupkg"/>
-    <PackageBinFiles Include="$(OutDir)\**\*.snupkg"/>
-  </ItemGroup>
 
   <Target Name="MovePackagesToFinalBin" DependsOnTargets="SignNuGetPackage" AfterTargets="SignNuGetPackage">
-    <Message Text="MovePackagesToFinalBin, sources = '$(OutDir)\**\*.nupkg'" Importance="High" />
+    <ItemGroup>
+      <PackageBinFiles Include="$(OutDir)\**\*.nupkg"/>
+      <PackageBinFiles Include="$(OutDir)\**\*.snupkg"/>
+    </ItemGroup>
+
+    <Message Text="MovePackagesToFinalBin, sources = '@(PackageBinFiles)'" Importance="High" />
     <Message Text="MovePackagesToFinalBin, destination = '$(RepoRootPath)/bin/Packages/$(Configuration)'" Importance="High" />
 
-    <Copy SourceFiles="$(OutDir)\**\*.nupkg" DestinationFolder="$(RepoRootPath)/bin/Packages/$(Configuration)" />
-    <Copy SourceFiles="$(OutDir)\**\*.snupkg" DestinationFolder="$(RepoRootPath)/bin/Packages/$(Configuration)" />
+    <Copy SourceFiles="@(PackageBinFiles)" DestinationFolder="$(RepoRootPath)/bin/Packages/$(Configuration)" />
   </Target>
 </Project>
