--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -45,12 +45,25 @@ steps:
   displayName: Update pipeline variables based on build outputs
   condition: succeededOrFailed()
 
-- task: PowerShell@2
+# - task: PowerShell@2
+#   inputs:
+#     filePath: azure-pipelines/artifacts/_pipelines.ps1
+#     arguments: -ArtifactNameSuffix "-$(Agent.JobName)"
+#   displayName: Publish artifacts
+#   condition: succeededOrFailed()
+
+- task: CopyFiles@2
+  displayName: 'Copy packages to staging directory'
   inputs:
-    filePath: azure-pipelines/artifacts/_pipelines.ps1
-    arguments: -ArtifactNameSuffix "-$(Agent.JobName)"
-  displayName: Publish artifacts
-  condition: succeededOrFailed()
+    contents:
+      - '**/*.nupkg'
+      - '**/*.snupkg'
+    targetFolder: $(Build.ArtifactStagingDirectory)/SignedPackages
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: $(Build.ArtifactStagingDirectory)/SignedPackages
+    artifactName: 'SignedPackages'
 
 - task: PublishSymbols@2
   inputs:
