--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -70,6 +70,8 @@ steps:
   inputs:
     TargetFolders: '$(Build.ArtifactStagingDirectory)/SignedPackages'
     ExcludeSNVerify: true
+    WhiteListPathForCerts: SignVerifyIgnore.csv
+    WhiteListPathForSigs: SignVerifyIgnore.csv
   env:
     TeamName: $(_TeamName)
 
