--- a/azure-pipelines/publish-deployables.yml
+++ b/azure-pipelines/publish-deployables.yml
@@ -1,13 +1,13 @@
 steps:
 - download: current
   displayName: Download deployables
-  artifact: deployables-Windows
+  artifact: SignedPackages
 
 - task: NuGetCommand@2
   displayName: Push packages to CI feed
   inputs:
     command: push
-    packagesToPush: $(Pipeline.Workspace)/deployables-Windows/*.nupkg
+    packagesToPush: $(Pipeline.Workspace)/SignedPackages/*.nupkg
     nuGetFeedType: internal
     publishVstsFeed: $(ci_feed)
     allowPackageConflicts: true
