--- a/templates/MobileBlazorBindings-app/NewApp.Android/NewApp.Android.csproj
+++ b/templates/MobileBlazorBindings-app/NewApp.Android/NewApp.Android.csproj
@@ -48,11 +48,14 @@
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
+    <PackageReference Include="Xamarin.Forms" Version="XamarinFormsVersion" />
+    <PackageReference Include="Xamarin.Essentials" Version="XamarinEssentialsVersion" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
