--- a/XamarinTest.WPF/XamarinTest.WPF.csproj
+++ b/XamarinTest.WPF/XamarinTest.WPF.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="0.8.355" />
+    <PackageReference Include="MtrDev.WebView2.Interop" Version="0.8.355.3" NoWarn="NU1701" />
+    <PackageReference Include="MtrDev.WebView2.Wpf" Version="0.8.355.2" NoWarn="NU1701" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.529-pre3" />
     <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.6.0.529-pre3" NoWarn="NU1701" />
   </ItemGroup>
