--- a/WebWindow.Blazor/WebWindow.Blazor.csproj
+++ b/WebWindow.Blazor/WebWindow.Blazor.csproj
@@ -16,4 +16,8 @@
     <EmbeddedResource Include="../WebWindow.Blazor.JS/dist/blazor.desktop.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
+  </ItemGroup>
+
 </Project>
