--- a/XamarinTest.WPF/XamarinTest.WPF.csproj
+++ b/XamarinTest.WPF/XamarinTest.WPF.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MtrDev.WebView2.Wpf" Version="0.8.355.2" NoWarn="NU1701" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.529-pre3" />
     <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.6.0.529-pre3" NoWarn="NU1701" />
+    <PackageReference Include="Microsoft.Toolkit.Wpf.UI.Controls.WebView" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
