--- a/sample/MyApplication/MyApplication.csproj
+++ b/sample/MyApplication/MyApplication.csproj
@@ -12,8 +12,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
-    <PackageReference Include="Microsoft.MobileBlazorBindings" Version="0.2.42-preview" />
+    <ProjectReference Include="..\..\src\BlazorDesktop\BlazorDesktop.csproj" />
   </ItemGroup>
 </Project>
