--- a/src/BlazorDesktop/BlazorDesktop.csproj
+++ b/src/BlazorDesktop/BlazorDesktop.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Microsoft.MobileBlazorBindings" Version="0.2.42-preview" />
+
+    <EmbeddedResource Include="../../WebWindow.Blazor.JS/dist/blazor.desktop.js" />
   </ItemGroup>
 
 </Project>
