--- a/src/BlazorDesktop/BlazorDesktop.csproj
+++ b/src/BlazorDesktop/BlazorDesktop.csproj
@@ -1,13 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Microsoft.MobileBlazorBindings" Version="0.2.42-preview" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
 
     <EmbeddedResource Include="../../WebWindow.Blazor.JS/dist/blazor.desktop.js" />
   </ItemGroup>
