--- a/sample/MyApplication/MyApplication.csproj
+++ b/sample/MyApplication/MyApplication.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,5 +13,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\BlazorDesktop\BlazorDesktop.csproj" />
+    <PackageReference Include="System.Net.Http.Json" Version="3.2.0-preview4.20177.1" />
   </ItemGroup>
 </Project>
