Can now round-trip IPC calls

--- a/src/BlazorDesktop.macOS/BlazorDesktop.macOS.csproj
+++ b/src/BlazorDesktop.macOS/BlazorDesktop.macOS.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BlazorDesktopMacOS.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
   </ItemGroup>
   <ItemGroup>
