--- a/sample/MyApplication.iOS/MyApplication.iOS.csproj
+++ b/sample/MyApplication.iOS/MyApplication.iOS.csproj
@@ -14,6 +14,7 @@
     <AssemblyName>MyApplication.iOS</AssemblyName>
     <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
@@ -116,19 +117,17 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors" />
-    <Reference Include="System.Xml" />
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="System.Memory" Version="4.0.1.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\MyApplication\MyApplication.csproj">
-      <Project>{4CF3CE90-D861-4FD3-99B0-B1FB8BC6F783}</Project>
+      <Project>{671E0BC2-F069-4E03-91A6-85163C7245C9}</Project>
       <Name>MyApplication</Name>
     </ProjectReference>
   </ItemGroup>
