--- a/sample/MyApplication.iOS/MyApplication.iOS.csproj
+++ b/sample/MyApplication.iOS/MyApplication.iOS.csproj
@@ -130,5 +130,15 @@
       <Project>{671E0BC2-F069-4E03-91A6-85163C7245C9}</Project>
       <Name>MyApplication</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\BlazorDesktop.iOS\BlazorDesktop.iOS.csproj">
+      <Project>{3CECADBB-3E56-4D47-A313-CE9E43DCAB02}</Project>
+      <Name>BlazorDesktop.iOS</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <!-- Workaround for Content not being copied to bundle -->
+    <BundleResource Include="..\MyApplication\WebUI\wwwroot\**\*.*">
+      <Link>Resources\WebUI\wwwroot\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </BundleResource>
   </ItemGroup>
 </Project>
