--- a/sample/MyApplication.Windows/MyApplication.Windows.csproj
+++ b/sample/MyApplication.Windows/MyApplication.Windows.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.529-pre3" />
     <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.6.0.529-pre3" NoWarn="NU1701" />
-    <ProjectReference Include="..\..\src\BlazorDesktop.WPF\BlazorDesktop.WPF.csproj" />
+    <ProjectReference Include="..\..\src\BlazorDesktop.Windows\BlazorDesktop.Windows.csproj" />
     <ProjectReference Include="..\MyApplication\MyApplication.csproj" />
   </ItemGroup>
 
