--- a/sample/MessageApp/MessageApp.iOS/MessageApp.iOS.csproj
+++ b/sample/MessageApp/MessageApp.iOS/MessageApp.iOS.csproj
@@ -15,6 +15,7 @@
     <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <ProvisioningType>automatic</ProvisioningType>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
@@ -132,8 +133,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
+    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="System.Memory" Version="4.0.1.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -141,5 +143,14 @@
       <Project>{BA085945-9D91-4520-B1CC-F615CA44B35A}</Project>
       <Name>MessageApp</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\src\BlazorDesktop.iOS\BlazorDesktop.iOS.csproj">
+      <Project>{3CECADBB-3E56-4D47-A313-CE9E43DCAB02}</Project>
+      <Name>BlazorDesktop.iOS</Name>
+    </ProjectReference>
+  </ItemGroup>
+    <!-- Workaround for Content not being copied to bundle -->
+    <BundleResource Include="..\MyApplication\WebUI\wwwroot\**\*.*">
+      <Link>Resources\WebUI\wwwroot\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </BundleResource>
   </ItemGroup>
 </Project>
