Add .blob to gitignore
Used for Mono crash dumps in iOS Simulator

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Mono crash dumps
+*.blob
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
