--- a/samples/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld.csproj
+++ b/samples/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Microsoft.MobileBlazorBindings\Microsoft.MobileBlazorBindings.csproj" />
+    <!--
+      NOTE: This project doesn't currently use any DualScreen features, but this reference is here
+      to make it easier to try out DualScreen features.
+    -->
+    <ProjectReference Include="..\..\..\src\Microsoft.MobileBlazorBindings.DualScreen\Microsoft.MobileBlazorBindings.DualScreen.csproj" />
   </ItemGroup>
 </Project>
