--- a/sample/MyApplication.Windows/MyApplication.Windows.csproj
+++ b/sample/MyApplication.Windows/MyApplication.Windows.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
     <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.6.0.800" NoWarn="NU1701" />
     <ProjectReference Include="..\..\src\BlazorDesktop.Windows\BlazorDesktop.Windows.csproj" />
