Add Android support
Major changes:
- New BlazorDesktop.Android project for Android Blazor hybrid apps
- Static web assets are loaded from embedded resources using Microsoft.Extensions.FileProviders.Embedded. Loading from disk is no longer supported.
- Blazor startup is done by each platform renderer, not by the app's index.html

--- a/sample/MessageApp/MessageApp.iOS/MessageApp.iOS.csproj
+++ b/sample/MessageApp/MessageApp.iOS/MessageApp.iOS.csproj
@@ -146,6 +146,8 @@
     <ProjectReference Include="..\..\..\src\BlazorDesktop.iOS\BlazorDesktop.iOS.csproj">
       <Project>{3CECADBB-3E56-4D47-A313-CE9E43DCAB02}</Project>
       <Name>BlazorDesktop.iOS</Name>
+      <IsAppExtension>false</IsAppExtension>
+      <IsWatchApp>false</IsWatchApp>
     </ProjectReference>
     <!-- Workaround for Content not being copied to bundle -->
     <BundleResource Include="..\MyApplication\WebUI\wwwroot\**\*.*">
