--- a/sample/MyApplication.iOS/MyApplication.iOS.csproj
+++ b/sample/MyApplication.iOS/MyApplication.iOS.csproj
@@ -133,6 +133,8 @@
     <ProjectReference Include="..\..\src\BlazorDesktop.iOS\BlazorDesktop.iOS.csproj">
       <Project>{3CECADBB-3E56-4D47-A313-CE9E43DCAB02}</Project>
       <Name>BlazorDesktop.iOS</Name>
+      <IsAppExtension>false</IsAppExtension>
+      <IsWatchApp>false</IsWatchApp>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
