--- a/src/BlazorDesktop/BlazorDesktop.csproj
+++ b/src/BlazorDesktop/BlazorDesktop.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Microsoft.MobileBlazorBindings" Version="0.3.26-preview" />
